# tallulah-classifier

./: .gitignore  20231031_email_model.pkl  Dockerfile  Makefile  Readme.md  email_model.pkl  pyproject.toml  requirements.txt  scripts.sh  setup.py
app/: email_classifier.py  email_classifier_tfid.py  email_dao_base.py  email_dao_dict.py  email_dao_mongo.py  main.py  tfid_multinominal_nb.py
app/data/: database_operations.py  operations.py
app/models/: common.py  email.py
app/utils/: message_queue.py  secrets.py
script/: classifier_fit.py  classifier_predict.py  load_emails.py  show_annotation_count.py
test/: add_annotation.py  classifier_fit_show.py  classifier_predict.py  create_csv.py  email_classifier_test.py  email_classifier_tfid_test.py  email_dao_mongo_test.py  email_test.py  load_emails.py  main_test.py  message_queue_dummy_test.py  message_queue_email_test.py  show_annotation.py  show_annotation_count.py  show_annotations.py
